# trinity-wallet

./: .babelrc  .bash_profile  .dockerignore  .eslintignore  .eslintrc  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc  .snyk  .tool-versions  CONTRIBUTING.md  Dockerfile  LICENSE  LOCALIZATION.md  README.md  SECURITY.md  SUPPORTERS.md  Untitled  build.sh  crowdin.yml  dangerfile.js  documentation.md  entry.js  full-setup.js  greenkeeper.json  index.android.js  package-lock.json  package.json  readme  store.js
.buildkite/: pipeline.yml
.github/: CODE_OF_CONDUCT.bitcoin.lili  CONTRIBUTING.md  SECURITY.md  dependabot.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: build_desktop.yml  build_docker.yml  codeql-analysis.yml  rollback_desktop.yml  snyk-monitor-js-desktop.yml  test_desktop.yml  test_mobile.yml  test_shared.yml
.husky/: pre-commit
actions/: accountActions.js  iotaActions.js  marketDataActions.js
android/: settings.gradle
android/app/: build.gradle
ci/desktop/: Dockerfile
ci/mobile/: Dockerfile
ci/selective-builds/: selective-builds.sh
components/: chart.js  simpleTransactionRow.js  transactionRow.js
containers/: balance.js  copySeedToClipboard.js  enterSeed.js  initialLoading.js  languageSetup.js  loading.js  login.js  newSeedSetup.js  paperWallet.js  receive.js  saveYourSeed.js  send.js  setPassword.js  tools.js  welcome.js  writeSeedDown.js
danger/: .babelrc  dangerfile.js  package.json
docs/: LOCALIZATION.md  copyrightHeader  overview.md
docs/dev/: entangled-mobile.md  localisation.md  realm.md  styleguide.md
docs/featureguide/: featureguide.md
docs/styleguide/: styleguide.md
ios/iotaWallet.xcodeproj/: project.pbxproj
libs/: cryptography.js  iota.js  util.js
reducers/: accountReducer.js  iotaReducer.js
routes/: entry.js  navigation.js
scripts/: newLocale.js  post-merge-githook.sh
src/desktop/: .snyk  (+25 more)
src/mobile/android/app/src/main/cpp/: CMakeLists.txt  JSCGarbageCollector.cpp  JSCGarbageCollector.h
(+1864 files in other folders)
